# stock-picker

client/: README.md  package-lock.json  package.json  setupProxy.js
client/src/: App.tsx
client/src/api/: responses.ts
client/src/components/: HelloWorld.tsx  RootContainer.tsx
client/src/components/page-template/: NavBar.tsx  PageTemplate.tsx
client/src/stocks-page/: StockItem.tsx
server/: pyproject.toml
server/app/: main.py  stock_handler.py
